# Galaxy_KaRMMa

./: .gitignore  LICENSE  README.md  environment-dev.yml  environment.yml  pyproject.toml
config/: desy3.yaml  mclmc.yaml  nuts.yaml
karmma/: __init__.py  config.py  forward_model.py  karmma.py  structs.py  transforms.py
karmma/samplers/: base.py  mclmc.py  nuts.py
karmma/utils/: __init__.py  metadata_utils.py  plotting_utils.py  summary_stats_utils.py
notebooks/: metadata.ipynb  metadata_runs.example.yaml  plot_maps.ipynb  plot_summary_statistics.ipynb
scripts/: compute_summary_statistics.py  run_karmma.py
